bindings/python/polyglot_logger/_ffi_generated.py

# Code generated by go run ./cmd/codegen; DO NOT EDIT.
# Source of truth: api/abi.json

from __future__ import annotations

import ctypes
from enum import IntEnum
from typing import Any


class Level(IntEnum):
    TRACE = 0
    DEBUG = 1
    INFO = 2
    WARN = 3
    ERROR = 4
    FATAL = 5


def bind(lib: Any) -> Any:
    """Configure ctypes signatures on a loaded CDLL/WinDLL."""
    lib.logger_version.argtypes = []
    lib.logger_version.restype = ctypes.c_char_p
    lib.logger_abi_version.argtypes = []
    lib.logger_abi_version.restype = ctypes.c_int
    lib.logger_create_v1.argtypes = [ctypes.c_char_p]
    lib.logger_create_v1.restype = ctypes.c_void_p
    lib.logger_create.argtypes = [ctypes.c_char_p]
    lib.logger_create.restype = ctypes.c_void_p
    lib.logger_log.argtypes = [ctypes.c_void_p, ctypes.c_int, ctypes.c_char_p, ctypes.c_char_p]
    lib.logger_log.restype = ctypes.c_int
    lib.logger_log_simple.argtypes = [ctypes.c_void_p, ctypes.c_int, ctypes.c_char_p]
    lib.logger_log_simple.restype = ctypes.c_int
    lib.logger_set_fields.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.logger_set_fields.restype = ctypes.c_int
    lib.logger_reload_config.argtypes = [ctypes.c_void_p, ctypes.c_char_p]
    lib.logger_reload_config.restype = ctypes.c_int
    lib.logger_flush.argtypes = [ctypes.c_void_p]
    lib.logger_flush.restype = ctypes.c_int
    lib.logger_close.argtypes = [ctypes.c_void_p]
    lib.logger_close.restype = ctypes.c_int
    lib.logger_stats.argtypes = [ctypes.c_void_p]
    lib.logger_stats.restype = ctypes.c_char_p
    lib.logger_last_error.argtypes = [ctypes.c_void_p]
    lib.logger_last_error.restype = ctypes.c_char_p
    lib.logger_free_string.argtypes = [ctypes.c_char_p]
    lib.logger_free_string.restype = None
    lib.logger_create_from_config_file.argtypes = [ctypes.c_char_p]
    lib.logger_create_from_config_file.restype = ctypes.c_int
    return lib
